--- a/package.json
+++ b/package.json
@@ -8,44 +8,43 @@
   },
   "author": "JustHollow",
   "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^6.3.1",
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-runtime": "^6.4.3",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+  "dependencies": {
+    "autoprefixer": "^6.4.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
-    "eslint": "^1.10.3",
-    "eslint-loader": "^1.2.1",
-    "eslint-plugin-react": "^3.16.1",
-    "express": "^4.13.4",
-    "npm-install-webpack-plugin": "^2.0.2",
-    "postcss-loader": "^0.8.0",
+    "eslint": "^3.3.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-react": "^6.1.0",
+    "express": "^4.14.0",
+    "postcss-loader": "^0.10.0",
     "precss": "^1.4.0",
+    "react": "^15.3.0",
     "react-bootstrap": "^0.30.2",
     "react-d3-basic": "^1.6.11",
+    "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^2.6.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "babel-runtime": "^6.3.19",
-    "react": "^0.14.6",
-    "react-bootstrap": "^0.30.2",
-    "react-dom": "^0.14.6",
-    "react-redux": "^4.0.6",
+    "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-router-bootstrap": "^0.23.1",
-    "redux": "^3.0.6",
+    "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2"
+  },
+  "devDependencies": {
+    "npm-install-webpack-plugin": "^4.0.4"
   },
   "repository": {
     "type": "git",
